plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.0-RC2'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.asciidoctor.jvm.convert' version '4.0.5'
}

group = 'com.sharex'
version = '0.0.1-SNAPSHOT'
description = 'ShareX Backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

ext {
    snippetsDir = file("build/generated-snippets")
    jjwtVersion = '0.12.5'
    mapstructVersion = '1.5.5.Final'
    lombokMapstructBindingVersion = '0.2.0'
    modelmapperVersion = '3.2.0'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

dependencies {

    // -------------------------------
    // SPRING BOOT STARTERS
    // -------------------------------
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // --- JPA + Hibernate (Boot 4 + Jakarta 3.1)
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // --- Flyway
    implementation 'org.springframework.boot:spring-boot-starter-flyway'
    implementation 'org.flywaydb:flyway-database-postgresql'

    // -------------------------------
    // 🔥 REDIS (HIGH PERFORMANCE)
    // Using Redisson for Bloom Filters + Idempotency
    // -------------------------------
     implementation 'org.redisson:redisson:3.23.5'

    // -------------------------------
    // KAFKA
    // -------------------------------
    implementation 'org.springframework.boot:spring-boot-starter-kafka'

    // -------------------------------
    // JACKSON
    // -------------------------------
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    // -------------------------------
    // JWT
    // -------------------------------
    implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"

    // -------------------------------
    // MAPSTRUCT
    // -------------------------------
    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
    annotationProcessor "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"

    // -------------------------------
    // MODELMAPPER
    // -------------------------------
    implementation "org.modelmapper:modelmapper:${modelmapperVersion}"

    // -------------------------------
    // DATABASE DRIVERS
    // -------------------------------
    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'com.h2database:h2'

    // -------------------------------
    // LOMBOK
    // -------------------------------
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // -------------------------------
    // DEVTOOLS
    // -------------------------------
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation 'io.lettuce:lettuce-core:6.3.0.RELEASE'


    // -------------------------------
    // TESTING
    // -------------------------------
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.kafka:spring-kafka-test'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    outputs.dir snippetsDir
    useJUnitPlatform()
}

tasks.named('asciidoctor') {
    inputs.dir snippetsDir
    dependsOn test
}

// =============================================
//   CUSTOM TEST SOURCE SETS
// =============================================
sourceSets {
    unit {
        java.srcDir file("src/test/unit/java")
        resources.srcDir file("src/test/unit/resources")
        compileClasspath += sourceSets.main.output + configurations.unitRuntimeClasspath
        runtimeClasspath += output + compileClasspath
    }

    integration {
        java.srcDir file("src/test/integration/java")
        resources.srcDir file("src/test/integration/resources")
        compileClasspath += sourceSets.main.output + configurations.integrationRuntimeClasspath
        runtimeClasspath += output + compileClasspath
    }
}

configurations {
    unitImplementation.extendsFrom testImplementation
    unitRuntimeClasspath.extendsFrom testRuntimeOnly

    integrationImplementation.extendsFrom testImplementation
    integrationRuntimeClasspath.extendsFrom testRuntimeOnly
}

tasks.register("unitTest", Test) {
    description = "Runs unit tests."
    group = "verification"
    testClassesDirs = sourceSets.unit.output.classesDirs
    classpath = sourceSets.unit.runtimeClasspath
    useJUnitPlatform()
}

tasks.register("integrationTest", Test) {
    description = "Runs integration tests."
    group = "verification"
    testClassesDirs = sourceSets.integration.output.classesDirs
    classpath = sourceSets.integration.runtimeClasspath
    shouldRunAfter unitTest
    useJUnitPlatform()
}

// Disable default test task if not needed
test {
    enabled = false
}
